bug: Solve alignment issues

--- a/src/components/dasboard/TaskItems.module.scss
+++ b/src/components/dasboard/TaskItems.module.scss
@@ -97,7 +97,7 @@
       .asign {
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
         gap: 8px;
 
         img {
